--- a/src/main/resources/static/css/admin/adminSchedule.css
+++ b/src/main/resources/static/css/admin/adminSchedule.css
@@ -9,32 +9,98 @@
 /* 드롭다운 스타일 */
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
-*{
+* {
   background-color: #EFEFEF;
   font-family: 'Pretendard-Regular';
   box-sizing: border-box;
-  /* border: 1px black solid; */
+  /* border: 1px solid black; */
 }
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   height: 100%;
-  width: 100%;
-  overflow: hidden; /* 스크롤 없애기 */
+  overflow: hidden;
+  /* 스크롤 없애기 */
 }
 
-.header{
-  width: auto;
-  height: 70px;
-  margin: 0;
-
+/* 전체 헤더 스타일 */
+.header {
   display: flex;
-  flex-direction: row;
-
-  align-items: flex-start;
   justify-content: flex-end;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #EFEFEF;
+  /* 부드러운 배경색 */
 }
+
+/* 로고 스타일 */
+.header .logo img {
+  width: 120px;
+  height: auto;
+}
+
+/* 기능 섹션 스타일 */
+.header .function {
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  gap: 20px;
+  margin-top: 15px;
+
+}
+
+/* 관리자 담당 업무 스타일 */
+.header .adminName {
+  border: 2px solid #205375;
+  border-radius: 8px;
+  padding: 3px 3px;
+  background-color: #EFEFEF;
+  font-size: 17px;
+  color: #205375;
+  font-weight: bold;
+  text-align: center;
+  white-space: nowrap;
+  width: 100px;
+  height: 44px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* 비행기 버튼 스타일 */
+.header .chatting button {
+  background-color: #205375;
+  color: #fff;
+  font-size: 23px;
+  padding: 10px;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  margin-right: 30px;
+}
+
+.header .chatting button:hover {
+  transform: scale(1.1);
+}
+
+.header .chatting button:focus {
+  outline: 2px solid #a5d8ff;
+}
+
+/* 모바일 반응형 */
+@media screen and (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .header .function {
+    justify-content: center;
+  }
+}
+
 /* 로고 */
 .logo {
   position: absolute;
@@ -48,7 +114,7 @@ html, body {
   max-height: 80px;
 }
 
-.function{
+.function {
   display: flex;
   flex-direction: row;
 
@@ -57,18 +123,23 @@ html, body {
   width: 500px;
 }
 
-body{
-  width: 1800px;
-  height: 880px;
-}
 
-.content{
-  width: 1800px;
-  height: 800px;
+
+.content-box {
   display: flex;
   flex-direction: row;
-
+  align-items: stretch;
+  gap: 20px;
+  width: 100%;
+  min-height: 100vh;
+  height: 100%;
+  overflow-x: hidden;
 }
+
+
+
+
+
 /* 사이드바 css입니당 */
 .sideBar {
   min-width: 250px;
@@ -88,6 +159,8 @@ body{
   font-weight: bold;
   color: #333;
   position: relative;
+  margin-top: 20px;
+  ;
 }
 
 .menu:hover {
@@ -120,6 +193,9 @@ body{
 .menu.active .submenu {
   display: block;
 }
+
+
+
 
 
 .calendar-container{
@@ -212,4 +288,8 @@ body{
 
 .fc-event-title {
   color: black;
+}
+
+.fc-icon{
+  background-color: #205375;
 }
