--- a/src/main/resources/templates/admin/adminSchedule.html
+++ b/src/main/resources/templates/admin/adminSchedule.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>일정관리</title>
+  <title>관리자 일정관리 | PhantomBooks</title>
   <link rel="stylesheet" href="/css/admin/adminSchedule.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js'></script>
   <script src="https://kit.fontawesome.com/913e662347.js" crossorigin="anonymous"></script>
   <script>
 
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
       var calendarEl = document.getElementById('calendar');
       var calendar = new FullCalendar.Calendar(calendarEl, {
         initialView: 'dayGridMonth'
@@ -22,24 +23,24 @@
 
 
 </head>
+
 <body>
   <section class="header">
     <div class="logo">
       <a href="/admin">
-          <img src="/images/고스트 코딩왕.png" alt="Logo">
+        <img src="/images/고스트 코딩왕.png" alt="Logo">
       </a>
     </div>
-  
-   
+
+
     <div class="function">
       <!-- 관리자 담당 업무 -->
       <div class="adminName">
-        <div th:if= "${session.loginMember}"
-             th:text="${session.loginMember.adminName}">
+        <div th:if="${session.loginMember}" th:text="${session.loginMember.adminName}">
           담당
         </div>
       </div>
-  
+
       <!-- 채팅방 입장 아이콘 -->
       <div class="chatting">
         <button class="fa-solid fa-paper-plane" id="chatting">
@@ -49,54 +50,56 @@
     </div>
 
   </section>
-  <main>
-    <section class="content">
-      <div class="sideBar">
-        <h3 class="menu">
-          <i class="fa-solid fa-users"></i>&nbsp;&nbsp;사용자 관련 관리
-          <ul class="submenu">
-            <li><a href="/admin/myPage">&nbsp;&nbsp;&nbsp;-&nbsp;내정보 변경</a></li>
-            <li><a href="/admin">&nbsp;&nbsp;&nbsp;-&nbsp;회원 관리</a></li>
-            <li>
-              <a href="/admin/adminManager" 
-                th:if= "${session.loginMember.name == '관리자' }">&nbsp;&nbsp;&nbsp;-&nbsp;관리자 계정 관리</a>
-            </li>
-          </ul>
-        </h3>
-      
-        <h3 class="menu">
-          <i class="fa-solid fa-arrow-trend-up"></i>&nbsp;&nbsp;매출 및 일정 관리
-          <ul class="submenu">
-            <li><a href="/admin/sales">&nbsp;&nbsp;&nbsp;-&nbsp;매출 관리</a></li>
-            <li><a href="/admin/schedule">&nbsp;&nbsp;&nbsp;-&nbsp;일정 관리</a></li>
-          </ul>
-        </h3>
-        
-        <h3 class="menu">
-          <i class="fa-solid fa-warehouse"></i>&nbsp;&nbsp;도서 관리
-          <ul class="submenu">
-            <li><a href="/admin/manager">&nbsp;&nbsp;&nbsp;-&nbsp;재고 관리</a></li>
-            <li><a href="/admin/request">&nbsp;&nbsp;&nbsp;-&nbsp;발주 요청</a></li>
-            <li><a href="/admin/newBook">&nbsp;&nbsp;&nbsp;-&nbsp;새 책 등록</a></li>
-          </ul>
-        </h3>
-        <h3 class="menu">
-          <i class="fa-solid fa-question"></i>&nbsp;&nbsp;고객 지원
-          <ul class="submenu">
-            <li><a href="/admin/query">&nbsp;&nbsp;&nbsp;-&nbsp;문의 관리</a></li>
-            <li><a href="/admin/review">&nbsp;&nbsp;&nbsp;-&nbsp;리뷰 관리</a></li>
-            <li><a href="/admin/faq">&nbsp;&nbsp;&nbsp;-&nbsp;FAQ 관리</a></li>
-            <li><a href="/admin/notice">&nbsp;&nbsp;&nbsp;-&nbsp;공지사항 관리</a></li>
-          </ul>
-        </h3>
-      </div>
 
-        <div id='calendar-container'>
-            <div id="calendar"></div>
-        </div>
 
-   </section>
+  <section class="content-box">
+    <div class="sideBar">
+      <h3 class="menu">
+        <i class="fa-solid fa-users"></i>&nbsp;&nbsp;사용자 관련 관리
+        <ul class="submenu">
+          <li><a href="/admin/myPage">&nbsp;&nbsp;&nbsp;-&nbsp;내정보 변경</a></li>
+          <li><a href="/admin">&nbsp;&nbsp;&nbsp;-&nbsp;회원 관리</a></li>
+          <li>
+            <a href="/admin/adminManager" th:if="${session.loginMember.name == '관리자' }">&nbsp;&nbsp;&nbsp;-&nbsp;관리자 계정
+              관리</a>
+          </li>
+        </ul>
+      </h3>
+
+      <h3 class="menu">
+        <i class="fa-solid fa-arrow-trend-up"></i>&nbsp;&nbsp;매출 및 일정 관리
+        <ul class="submenu">
+          <li><a href="/admin/sales">&nbsp;&nbsp;&nbsp;-&nbsp;매출 관리</a></li>
+          <li><a href="/admin/schedule">&nbsp;&nbsp;&nbsp;-&nbsp;일정 관리</a></li>
+        </ul>
+      </h3>
+
+      <h3 class="menu">
+        <i class="fa-solid fa-warehouse"></i>&nbsp;&nbsp;도서 관리
+        <ul class="submenu">
+          <li><a href="/admin/manager">&nbsp;&nbsp;&nbsp;-&nbsp;재고 관리</a></li>
+          <li><a href="/admin/request">&nbsp;&nbsp;&nbsp;-&nbsp;발주 요청</a></li>
+          <li><a href="/admin/newBook">&nbsp;&nbsp;&nbsp;-&nbsp;새 책 등록</a></li>
+        </ul>
+      </h3>
+      <h3 class="menu">
+        <i class="fa-solid fa-question"></i>&nbsp;&nbsp;고객 지원
+        <ul class="submenu">
+          <li><a href="/admin/query">&nbsp;&nbsp;&nbsp;-&nbsp;문의 관리</a></li>
+          <li><a href="/admin/review">&nbsp;&nbsp;&nbsp;-&nbsp;리뷰 관리</a></li>
+          <li><a href="/admin/faq">&nbsp;&nbsp;&nbsp;-&nbsp;FAQ 관리</a></li>
+          <li><a href="/admin/notice">&nbsp;&nbsp;&nbsp;-&nbsp;공지사항 관리</a></li>
+        </ul>
+      </h3>
+    </div>
+
+    <div id='calendar-container'>
+      <div id="calendar"></div>
+    </div>
+
+  </section>
   </main>
   <script src="/js/admin/adminSchedule.js"></script>
 </body>
+
 </html>
